# public_astrostandards

./: README.md  pyproject.toml  setup.py
public_astrostandards/: __init__.py
public_astrostandards/V95/linux/: AstroFuncDll.py  ExtEphemDll.py  ObsDll.py  VcmDll.py
public_astrostandards/V95/utils/: load_utils.py
public_astrostandards/V95/win/: ObsDll.py  SensorDll.py  Sgp4PropDll.py  SpPropDll.py  SpVecDll.py  VcmDll.py
public_astrostandards/V96/linux/: AofDll.py  ComboDll.py  ElOpsDll.py  LamodDll.py  ObsOpsDll.py  SpPropDll.py  TimeFuncDll.py  TleDll.py
public_astrostandards/V96/utils/: helpers.py
public_astrostandards/V96/win/: BamDll.py  ComboDll.py  ElOpsDll.py  EnvConstDll.py  LamodDll.py  ObsOpsDll.py  SaasDll.py  SensorDll.py  Sgp4PropDll.py
public_astrostandards/tests/: test_date.py
src/public_astrostandards/: __init__.py  dll_installer.py
src/public_astrostandards/V95/linux/: AstroFuncDll.py  DllMainDll.py  ElCompDll.py  EnvConstDll.py  ExtEphemDll.py  ObsDll.py  SatStateDll.py  SensorDll.py  Sgp4PropDll.py  SpVecDll.py  TimeFuncDll.py  TleDll.py  VcmDll.py
src/public_astrostandards/V95/win/: AstroFuncDll.py  DllMainDll.py  ElOpsDll.py  EnvConstDll.py  ExtEphemDll.py  ObsDll.py  SatStateDll.py  SensorDll.py  Sgp4PropDll.py  SpPropDll.py  SpVecDll.py  TimeFuncDll.py  TleDll.py  VcmDll.py
src/public_astrostandards/V96/linux/: AofDll.py  AstroFuncDll.py  BamDll.py  BatchDCDll.py  ComboDll.py  DllMainDll.py  ElCompDll.py  ElOpsDll.py  EnvConstDll.py  ExtEphemDll.py  FovDll.py  LamodDll.py  ObsDll.py  ObsOpsDll.py  (+10 more)
tests/: __init__.py
(+75 files in other folders)
