[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "public_astrostandards"
dependencies= [
	'numpy'
]
version = "0.0.1"
authors = [
  { name="Kerry N. Wood", email="kerry.wood@asterism.ai" },
]
description = "Harnesses for the open portion of the AstroStandards"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/kerrywood/public_astrostandards"
Issues= "https://github.com/kerrywood/public_astrostandards/issues"
